--- a/quiz/index.html
+++ b/quiz/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    
     <title>quiz</title>
     <div id="quiz-title"></div>
     <div class="questions"></div>
@@ -25,6 +26,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
         </script>
+    <script src="//cdn.jsdelivr.net/mojs/latest/mo.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
     <script src="main.js"></script>
 </body>
 
